<resources>
    <string name="app_name">Android Store</string>
    <string name="label">Email</string>
    <string name="labelPassword">Password</string>
    <string name="labelPhone">Phone</string>
    <string name="labelName">Name</string>
    <string name="labelSurname">Surname</string>
    <string name="labelMiddleName">Middle Name</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="product_id">Product Id</string>
    <string name="find_photos">Find photos</string>
    <string name="selected_photo">Обране фото:</string>
    <string name="current_photo">Поточне фото:</string>
</resources>