<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        tools:context=".ProductEditActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Редагувати\nпродукт"
            android:textAlignment="center"
            android:textSize="28dp"
            android:onClick="SelectImage"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/textView"

            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:hint="@string/price"
            app:layout_constraintTop_toBottomOf="@+id/textFieldName"

            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCurrentImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_photo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textFieldPrice"
            />

        <ImageView
            android:id="@+id/currentImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentImage"
            />

        <TextView
            android:id="@+id/tvSelectedPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_photo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/currentImage"
            />

        <com.oginotihiro.cropview.CropView
            android:id="@+id/cropView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/no_image"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedPhoto" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:onClick="openSomeActivityForResult"
            android:text="Обрати фото"
            app:layout_constraintTop_toBottomOf="@+id/cropView" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:onClick="EditProduct"
            android:text="Зберегти"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>